<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#0C770F">

    <Button
        android:id="@+id/startGameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="24dp"
        android:text="@string/start"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/showStatsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/stats"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/startGameBtn"
        app:layout_constraintStart_toStartOf="@+id/startGameBtn"
        app:layout_constraintTop_toBottomOf="@+id/startGameBtn" />

    <Button
        android:id="@+id/peferencesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/preferences"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/showStatsBtn"
        app:layout_constraintStart_toStartOf="@+id/showStatsBtn"
        app:layout_constraintTop_toBottomOf="@+id/showStatsBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>