<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutStats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenboard_vertical">

    <ImageView
        android:id="@+id/thumbsUp"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/thumbsUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/thumbs_up_white" />

    <TextView
        android:id="@+id/correctAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/placeholder"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/thumbsUp"
        app:layout_constraintStart_toStartOf="@+id/thumbsUp"
        app:layout_constraintTop_toBottomOf="@+id/thumbsUp" />

    <ImageView
        android:id="@+id/thumbsDown"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginTop="42dp"
        android:contentDescription="@string/thumbsDown"
        app:layout_constraintEnd_toEndOf="@+id/correctAnswers"
        app:layout_constraintStart_toStartOf="@+id/correctAnswers"
        app:layout_constraintTop_toBottomOf="@+id/correctAnswers"
        app:srcCompat="@drawable/thumbs_down_white" />

    <TextView
        android:id="@+id/wrongAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/placeholder"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/thumbsDown"
        app:layout_constraintStart_toStartOf="@+id/thumbsDown"
        app:layout_constraintTop_toBottomOf="@+id/thumbsDown" />

    <ImageView
        android:id="@+id/trashCan"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/trashCan"
        android:onClick="deleteStats"
        app:layout_constraintEnd_toEndOf="@+id/wrongAnswers"
        app:layout_constraintStart_toStartOf="@+id/wrongAnswers"
        app:layout_constraintTop_toBottomOf="@+id/wrongAnswers"
        app:srcCompat="@drawable/trash" />

</androidx.constraintlayout.widget.ConstraintLayout>